# Artificial_Intelligence

./: .gitignore
AI SANTE/Salesbot/: LICENSE  README.md  requirements.txt
AI SANTE/Voice nav/: README.md  Voice_navigation.py  requirements.txt
AI SANTE/voice recognition/: README.md  Sprectrum.py  requirements.txt
CCTVLIVE/Vijay-Safety-Kit-Detection-System/: README.md  ppt2.py
CCTVLIVE/Vijay-U-turn/: README.md  T-3_U turn.py  requirements.txt
CCTVLIVE/Vijay-Vehicle-Speed-Detection-System/: README.md  Speed tracking.py  requirements.txt
CCTVLIVE/Vijay-Vehicle-Speed-and-Multi-Zone-Detection-System/: README.md  multi_zone_detection.py  requirements.txt
CCTVLIVE/Vijay-Vehicle_Accident_System/: Accident.py  README.md  requirements.txt
CCTVLIVE/Vijay-Vehicle_Detection_System/: README.md  Vehicle_detection.py
CCTVLIVE/Vijay_people_counter/: README.md  ppl_counter.py  requirements.txt
CCTVLIVE/cctv-ai-cv/: .dockerignore  Dockerfile  README.md  ai_server_requirements  ai_services_api.py  api_token.ini  benchmark_calculate.py  camera-preset.json  camera_starter_service.py  cctv-ai-cv-docs.docx  common.py  cpu_gpu_usage_monitor.py  docker_sample  export.py  miniotest.py  payload.json  settings.py  (+11 more)
END-to_END CHATBOT/Agentic AI/crewai/Crew_Ai/new_agent/: README.md  pyproject.toml
END-to_END CHATBOT/Agentic AI/crewai/Crew_Ai/new_agent/src/new_agent/: crew.py  main.py
END-to_END CHATBOT/Agentic AI/crewai/Crew_Ai/new_agent/src/new_agent/config/: agents.yaml  tasks.yaml
END-to_END CHATBOT/Agentic AI/crewai/Crew_Ai/new_agent/src/new_agent/tools/: custom_tool.py
(+1223 files in other folders)
