[project]
name = "new_agent"
version = "0.1.0"
description = "new_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "psycopg2>=2.9.10",
    "uv>=0.6.9",
]

[project.scripts]
new_agent = "new_agent.main:run"
run_crew = "new_agent.main:run"
train = "new_agent.main:train"
replay = "new_agent.main:replay"
test = "new_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
